[package]
name = "kcp"
version = "0.4.12"
authors = ["Matrix <113445886@qq.com>", "Y. T. Chung <zonyitoo@gmail.com>"]
description = "Reliable-UDP Library for Rust"
license = "MIT"
readme = "README.md"
keywords = ["kcp", "udp", "reliable"]
documentation = "https://docs.rs/kcp"
repository = "https://github.com/Matrix-Zhang/kcp"

[dependencies]
bytes = "1.0"
log = "0.4"

[dev-dependencies]
time = "0.2"
rand = "0.8"
env_logger = "0.8"
